fix: Assets wrong position

--- a/src/style.scss
+++ b/src/style.scss
@@ -9,7 +9,7 @@ body {
 	color: #eef8ce;
 	font-family: 'Poppins', sans-serif;
 	font-size: 14px;
-	background-image: url(img/bg.png),
+	background-image: url(/assets/img/bg.png),
 		repeating-linear-gradient(
 			to right,
 			transparent 0 500px,
